// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Renders disabled input 1`] = `
<div
  class="flex flex-col px-0"
>
  <label
    class="mb-6 text-xl font-medium "
    for="Default"
    id="Default"
  >
    Default
  </label>
  <input
    class="app-disabled shadow-sm focus:ring-blue-500 focus:border-blue-500 focus:border-2 block w-96 h-14 sm:text-sm border border-gray-400 rounded-sm pl-4"
    data-testid="input-test"
    disabled=""
    placeholder=""
    type="text"
  />
  
</div>
`;

exports[`Input Renders error 1`] = `
<div
  class="flex flex-col px-0"
>
  <label
    class="mb-6 text-xl font-medium "
    for="Default"
    id="Default"
  >
    Default
  </label>
  <input
    class="shadow-sm focus:ring-red-500 focus:border-red-500 focus:border-2 block w-96 h-14 sm:text-sm border border-red-500 rounded-sm pl-4"
    data-testid="input-test"
    placeholder=""
    type="text"
  />
  <p
    class="pt-2 text-sm app-red"
  >
    error
  </p>
</div>
`;

exports[`Input Renders input 1`] = `
<div
  class="flex flex-col px-0"
>
  <label
    class="mb-6 text-xl font-medium "
    for="Default"
    id="Default"
  >
    Default
  </label>
  <input
    class="shadow-sm focus:ring-blue-500 focus:border-blue-500 focus:border-2 block w-96 h-14 sm:text-sm border border-gray-400 rounded-sm pl-4"
    data-testid="input-test"
    placeholder=""
    type="text"
  />
  
</div>
`;

exports[`Input Renders input with maxLength 1`] = `
<div
  class="flex flex-col px-0"
>
  <label
    class="mb-6 text-xl font-medium "
    for="Default"
    id="Default"
  >
    Default
  </label>
  <input
    class="shadow-sm focus:ring-blue-500 focus:border-blue-500 focus:border-2 block w-96 h-14 sm:text-sm border border-gray-400 rounded-sm pl-4"
    data-testid="input-test"
    maxlength="6"
    placeholder=""
    type="text"
  />
  
</div>
`;

exports[`Input Renders input with placeholder 1`] = `
<div
  class="flex flex-col px-0"
>
  <label
    class="mb-6 text-xl font-medium "
    for="Default"
    id="Default"
  >
    Default
  </label>
  <input
    class="shadow-sm focus:ring-blue-500 focus:border-blue-500 focus:border-2 block w-96 h-14 sm:text-sm border border-gray-400 rounded-sm pl-4"
    data-testid="input-test"
    placeholder="Placeholder"
    type="text"
  />
  
</div>
`;

exports[`Input Renders readonly input 1`] = `
<div
  class="flex flex-col px-0"
>
  <label
    class="mb-6 text-xl font-medium "
    for="Default"
    id="Default"
  >
    Default
  </label>
  <input
    class="shadow-sm focus:ring-blue-500 focus:border-blue-500 focus:border-2 block w-96 h-14 sm:text-sm border border-gray-400 rounded-sm pl-4"
    data-testid="input-test"
    placeholder=""
    readonly=""
    type="text"
  />
  
</div>
`;
